--- a/meta/main.yml
+++ b/meta/main.yml
@@ -46,7 +46,7 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: ["ssh", "public_keys", "advanced"]
+  galaxy_tags: ["ssh", "publickeys", "advanced"]
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
